kubernetes/ai-agents/kokoro-tts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kokoro-tts
  name: kokoro-tts
  namespace: ai-agents
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kokoro-tts
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-08-18T02:11:19-05:00'
      labels:
        app: kokoro-tts
    spec:
      containers:
      - env:
        - name: USE_ONNX
          value: '1'
        - name: NUM_WORKERS
          value: '1'
        - name: DEFAULT_VOICE
          value: ef_dora
        - name: DEFAULT_LANG_CODE
          value: e
        image: ghcr.io/remsky/kokoro-fastapi-cpu:latest
        imagePullPolicy: IfNotPresent
        name: kokoro-tts
        ports:
        - containerPort: 8880
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8880
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: '2'
            memory: 3Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: zimaboard2
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kokoro-tts
  name: kokoro-tts-service
  namespace: ai-agents
spec:
  ports:
  - name: http
    port: 8880
    protocol: TCP
    targetPort: 8880
  selector:
    app: kokoro-tts
  type: ClusterIP
