kubernetes/ai-agents/localai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: localai
  name: localai
  namespace: ai-agents
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: localai
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-08-18T02:16:05-05:00'
      labels:
        app: localai
    spec:
      containers:
      - env:
        - name: THREADS
          value: '2'
        - name: MODELS_PATH
          value: /models
        - name: DEBUG
          value: 'true'
        image: quay.io/go-skynet/local-ai:latest-cpu
        imagePullPolicy: IfNotPresent
        name: localai
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: '2'
            memory: 3500Mi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /models
          name: models
        - mountPath: /models/text-embedding-ada-002.yaml
          name: model-config
          subPath: text-embedding-ada-002.yaml
        - mountPath: /models/whisper-1.yaml
          name: model-config
          subPath: whisper-1.yaml
        - mountPath: /models/qwen2.5-1.5b.yaml
          name: model-config
          subPath: qwen2.5-1.5b.yaml
        - mountPath: /models/karen.yaml
          name: model-config
          subPath: karen.yaml
        - mountPath: /models/tts-1.yaml
          name: model-config
          subPath: tts-1.yaml
        - mountPath: /models/tts-female.yaml
          name: model-config
          subPath: tts-female.yaml
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: zimaboard2
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: models
        persistentVolumeClaim:
          claimName: localai-models-pvc
      - configMap:
          defaultMode: 420
          name: localai-models-config
        name: model-config
---
apiVersion: v1
kind: Service
metadata:
  name: localai-service
  namespace: ai-agents
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: localai
  type: ClusterIP
